First iteration of Bash content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Skeleton for Documentation Project
+site_name: Skriptiohjelmointi
 
 theme:
   name: material
@@ -60,7 +60,6 @@ plugins:
   - awesome-pages
   - search
 
-# TODO: Replace the copyright with correct. Also add LICENCE file. Template included.
 copyright: |
-  Copyright &copy; 2023 <a href="https://www.example.com">Example Organization</a>. 
-  Licenced under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">XX-XX-XX 4.0</a>
+  Copyright &copy; 2025 <a href="https://www.kamk.f">Kajaani University of Applied Sciences</a>. 
+  Licenced under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">BY-NC-ND 4.0</a>
