--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,21 @@
 authors = [
     {name = "Jani Sourander", email = "sourander@gmail.com"},
 ]
-requires-python = "<4.0,>=3.10"
+requires-python = "<4.0,>=3.12"
 dependencies = [
     "mkdocs-material~=9.5",
     "mkdocs-awesome-pages-plugin~=2.9",
 ]
-name = "doc-skeleton"
+name = "skriptiohjelmointi"
 version = "0.1.0"
 description = ""
 readme = "README.md"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.1.0",
+    "pre-commit-hooks",
+]
+
+[tool.uv.sources]
+pre-commit-hooks = { git = "https://github.com/sourander/pre-commit-hooks" }
