First version of Curium added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,5 +61,5 @@ plugins:
   - search
 
 copyright: |
-  Copyright &copy; 2025 <a href="https://www.kamk.f">Kajaani University of Applied Sciences</a>. 
+  Copyright &copy; 2025 <a href="https://www.kamk.fi">Kajaani University of Applied Sciences</a>. 
   Licenced under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">BY-NC-ND 4.0</a>
