--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,5 @@ readme = "README.md"
 
 [dependency-groups]
 dev = [
-    "pre-commit>=4.1.0",
-    "pre-commit-hooks",
+    "pre-commit>=4.1.0"
 ]
-
-[tool.uv.sources]
-pre-commit-hooks = { git = "https://github.com/sourander/pre-commit-hooks" }
